<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/color_white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_your_name"
        style="@style/TextStyleStartMedium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CommonInputEditTextStyle"
        android:hint="@string/label_add_your_name"
        android:textSize="18sp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvTextPreview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/label_preview"
        android:textSize="36sp"
        android:textColor="@color/color_white"
        android:background="#33000000"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_style"
        style="@style/TextStyleStartMedium"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp">

        <ToggleButton
            android:id="@+id/btnBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textOn="@string/label_remove_bold"
            android:textOff="@string/label_apply_bold"
            android:paddingHorizontal="@dimen/_8sdp"
            style="@style/CommonButtonStyle"
            android:backgroundTint="@color/color_red"
            android:textColor="@color/color_white"
            android:layout_marginEnd="16dp"/>

        <ToggleButton
            android:id="@+id/btnItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textOn="@string/label_remove_italic"
            android:textOff="@string/label_apply_italic"
            android:paddingHorizontal="@dimen/_8sdp"
            style="@style/CommonButtonStyle"
            android:backgroundTint="@color/color_blue"
            android:textColor="@color/color_white"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_color"
        style="@style/TextStyleStartBold"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <GridLayout
        android:id="@+id/colorGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:padding="@dimen/_5sdp"
        android:background="@color/color_grey"
        android:columnCount="6"
        android:alignmentMode="alignBounds"
        android:layout_marginBottom="16dp"/>

</LinearLayout>