<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_brush_settings"
            style="@style/TextStyleStartMedium"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_color"
            style="@style/TextStyleStartMedium"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <GridLayout
            android:id="@+id/colorGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_grey"
            android:padding="@dimen/_5sdp"
            android:columnCount="5"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_size"
            style="@style/TextStyleStartMedium"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <SeekBar
            android:id="@+id/sizeSlider"
            android:thumbTint="@color/color_black"
            android:progressTint="@color/color_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvSizeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30px"
            style="@style/TextStyleStartMedium"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_opacity"
            style="@style/TextStyleStartMedium"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <SeekBar
            android:id="@+id/opacitySlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/color_black"
            android:thumbTint="@color/color_black"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvOpacityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="255"
            style="@style/TextStyleStartMedium"
            android:layout_marginBottom="14dp"/>

        <ToggleButton
            android:id="@+id/toggleEraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textOn="@string/label_eraser_on"
            android:textOff="@string/label_eraser_off"
            android:layout_gravity="center"
            android:layout_marginBottom="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_preview"
            style="@style/TextStyleStartMedium"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:id="@+id/previewBrush"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#444444"
            android:scaleType="centerInside"/>

    </LinearLayout>
</ScrollView>