<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextStyleStartBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtImageCount"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="@dimen/_15sdp"
                android:visibility="gone"
                android:textColor="@color/secondary_color"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_back_round"
                android:layout_marginStart="@dimen/screen_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:visibility="gone"
                android:src="@drawable/ic_saved"
                android:elevation="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:focusable="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_share"
                android:elevation="@dimen/_20sdp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toStartOf="@id/btnSave"
                android:focusable="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageViewer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTop"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/secondary_color"
            android:padding="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imgUpload"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fabMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/screen_margin"
            app:fab_labelStyle="@style/custom_floating_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:fab_addButtonColorPressed="@color/color_red"
            app:fab_addButtonPlusIconColor="@color/color_black"
            app:fab_addButtonColorNormal="@color/color_white">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_icon="@drawable/ic_info"
                app:fab_title="@string/label_details"
                app:fab_colorNormal="@color/color_white"
                app:fab_colorPressed="@color/color_red"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_icon="@drawable/ic_share"
                app:fab_title="@string/label_share"
                app:fab_colorNormal="@color/color_white"
                app:fab_colorPressed="@color/color_red"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabWallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_icon="@drawable/ic_phone"
                android:visibility="gone"
                app:fab_title="@string/label_set_wallpaper"
                app:fab_colorNormal="@color/color_white"
                app:fab_colorPressed="@color/color_red"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_icon="@drawable/ic_delete_red"
                app:fab_title="@string/label_delete"
                app:fab_colorNormal="@color/color_white"
                app:fab_colorPressed="@color/color_red"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>